<resources>
    <!-- Project Strings -->
    <string name="app_name">uCounter</string>

    <!-- Activity Strings -->
    <string name="empty_counter">No counters yet? Add some!</string>

    <!-- Onboarding Fragment Strings -->
    <string name="onboarding_title_welcome">Welcome</string>
    <string name="onboarding_title_instructions">How to Use</string>
    <string name="onboarding_description_welcome">Hello, welcome to the uCounter App!</string>
    <string name="onboarding_description_instructions">
        You can begin using this app by going to the navigation drawer on the left and clicking
        Add Counter!
    </string>
    <!-- Menu Strings -->
    <string name="menu_navigation_box">uCounter</string>
    <string name="menu_dialog_add_counter">Add counter</string>
    <string name="menu_add_group">Add group</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_delete_all">Delete all</string>
    
    <!-- Dialogs -->
    <string name="dialog_add_title">Add A Counter</string>
    <string name="dialog_add_hint">Name</string>
    <string name="dialog_delete_positive_button">Delete</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_message">Are you sure you want to delete this item?</string>

    <!-- Current Page Action Strings -->
    <string name="action_delete_current_data">Delete</string>
    <string name="action_counter_settings">Modify</string>

    <!-- Counter Page Strings -->
    <string name="counter_page_add">+</string>
    <string name="counter_page_subtract">-</string>

    <!-- Preferences -->
    <string name="preferences_display_title">Display</string>
    <string name="preferences_display_value_size">Value size</string>
    <string name="preferences_display_title_size">Title size</string>
    <string name="preferences_display_theme">Theme</string>
    <string name="preferences_display_animate">Animate</string>

    <!-- Counter Settings -->
    <string name="counter_settings_title">Counter Settings</string>
    <string name="counter_settings_general">General</string>
    <string name="counter_settings_name">Name</string>
    <string name="counter_settings_value">Value</string>
    <string name="counter_settings_display">Display</string>
    <string name="counter_settings_color">Color</string>
    <string name="counter_Settings_other">Other</string>
    <string name="counter_settings_delete">Delete</string>
</resources>
