<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Title"
    >
    <!--General Settings-->
    <PreferenceCategory
        android:title="@string/counter_settings_general"
        android:key="pref_key_display_settings">
        <EditTextPreference
            android:title="@string/counter_settings_name"
            android:key="gen_key_name_settings"
            android:summary="Name"/>
        <EditTextPreference
            android:title="@string/counter_settings_value"
            android:key="gen_key_value_settings"
            android:summary="0" />
    </PreferenceCategory>
    <PreferenceCategory android:layout="@layout/divider"/>
    <!-- Display Settings -->
    <PreferenceCategory
        android:title="@string/counter_settings_display">
        <EditTextPreference
            android:title="@string/counter_settings_color"
            android:key="gen_key_color_settings"
            android:summary="blue"/>
    </PreferenceCategory>
    <PreferenceCategory android:layout="@layout/divider"/>
    <PreferenceCategory
        android:title="@string/counter_Settings_other"
        android:key="gen_key_other_settings">
        <EditTextPreference
            android:title="@string/counter_settings_delete"
            android:key="gen_key_delete_settings"/>
    </PreferenceCategory>
</PreferenceScreen>